--- a/css/style.css
+++ b/css/style.css
@@ -7,81 +7,65 @@ body {
 }
 
 h1 {
-	font: normal normal 18px Verdana, Geneva, Arial, Helvetica, sans-serif;
+	font-size: 18px;
 	margin: 0 0 5px 0;
 }
 
 h2 {
-	font: normal normal 16px Verdana, Geneva, Arial, Helvetica, sans-serif;
+  font-size: 16px;
 	margin: 0 0 5px 0;
 }
 
 h3 {
-	font: normal normal 13px Verdana, Geneva, Arial, Helvetica, sans-serif;
-	color: #008000;
+  font-size: 13px;
+	color: #328AA4;
 	margin: 0 0 15px 0;
 }
 
 table { 
-	border-collapse: collapse; 
-}
-	
-table th, table td { 
-	border: 1px solid black; 
+	border-collapse: collapse;
 }
 
-table td {
-	border-color:#DDDDDD #CCCCCC;
-	border-style:solid solid none none;
-	border-width:1px 1px medium medium;
-	padding:2px 3px 3px 4px;
+th {
+  color: #FFF;
+  font-size: 11px;
+  background: url("tr_back.gif") repeat-x scroll 0 0 #328AA4;
+	border: 1px solid #FFFFFF;
+	padding: 4px 0px;
 }
 
-table, td, a {
-	color: #000;
-	font: normal normal 12px Verdana, Geneva, Arial, Helvetica, sans-serif;
+td {
+  color: #555;
+  font-size: 11px;
+  border: 1px solid #FFFFFF;
+	padding: 3px 2px;
 }
 
-/* make the TH elements pretty */
-thead th {
-	background: #C96;
-	border-left: 1px solid #EB8;
-	border-right: 1px solid #B74;
-	border-top: 1px solid #EB8;
-	font-weight: normal;
-	padding: 4px 3px;
+.even td {
+	background: #E5F1F4;
+}
+.odd td {
+	background: #F8FBFC;
 }
 
-/* make the A elements pretty. makes for nice clickable headers                */
-thead a, thead a:link, thead a:visited {
-	color: #FFF;
-	display: block;
-	text-decoration: none;
-	width: 100%
+.negative { 
+	color: #CC1122; 
 }
 
-/* make the A elements pretty. makes for nice clickable headers                */
-/* WARNING: swapping the background on hover may cause problems in WinIE 6.x   */
-thead a:hover {
-	color: #FFF;
-	display: block;
-	text-decoration: underline;
-	width: 100%
+.ui-datepicker {
+	font-size: 12px;
 }
 
-/* make TD elements pretty. Provide alternating classes for striping the table */
-/* http://www.alistapart.com/articles/zebratables/                             */
-tbody td, tbody.scrollContent tr.normalRow td {
-	background: #FFF;
-}
-tbody tr.alternateRow td {
-	background: #EEE;
+/* Results Page */
+.playerList th span {
+  display: inline-block;
+  overflow: hidden;
+  white-space: nowrap;
 }
 
-tr.divider td {
-  background:#C96;
+.resultTable td:first-child {
+	text-align: center;
 }
-
-.negative { color: red; }
-.ui-datepicker {font-size:12px;}
-	
+.resultTable td {
+  text-align: right;
+}
