Players page WIP

--- a/src/main/webapp/css/quicksplit.css
+++ b/src/main/webapp/css/quicksplit.css
@@ -60,3 +60,10 @@ ul.pagination {
 .has-error .help-block::before {
   content: "* ";
 }
+
+/*
+ * Buttons
+ */
+.button-row {
+  margin-bottom: 20px;
+}
