--- a/src/main/webapp/WEB-INF/templates/players.html
+++ b/src/main/webapp/WEB-INF/templates/players.html
@@ -1,58 +1,51 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     
-    <title>Players</title>
+    <title>Player List</title>
     
-    <!-- jQuery -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
-    <!--<script src="js/jquery-1.5.1.min.js"></script>-->
-    <script src="js/jquery-ui-1.8.14.custom.min.js"></script>
-    <link type="text/css" href="css/ui-lightness/jquery-ui-1.8.14.custom.css" rel="stylesheet" />
- 
-    <!-- Bootstrap -->
-    <script src="js/bootstrap.js"></script>
-    <link type="text/css" href="css/bootstrap.css" rel="stylesheet">
-    <link type="text/css" href="css/bootstrap-theme.css" rel="stylesheet">
+    <script src="../../js/bootstrap.js" th:src="@{js/bootstrap.js}"></script>
+    <script src="http://ajax.aspnetcdn.com/ajax/jquery.validate/1.15.0/jquery.validate.min.js"></script>
+    <script src="../../js/quicksplit.js" th:src="@{js/quicksplit.js}"></script>
     
-    <!-- Quicksplit -->
-    <script src="js/quicksplit.js"></script>
-    <link type="text/css" href="css/quicksplit.css" rel="stylesheet"/>
+    <link type="text/css" rel="stylesheet"
+      href="../../css/bootstrap.css" th:href="@{/css/bootstrap.css}">
+    <link type="text/css" rel="stylesheet"
+      href="../../css/bootstrap-theme.css" th:href="@{/css/bootstrap-theme.css}">
+    <link type="text/css" rel="stylesheet"
+      href="../../css/quicksplit.css" th:href="@{/css/quicksplit.css}"/>
       
-    <!-- Custom Page Content -->
     <script>
 	    $(document).ready( function(){
 	    	
-	    	$( "#edit-player form" ).on( "submit", function(e){
-	    		console.log( "form submit" );
-	    		e.preventDefault();
-	    		var data = $(this).serialize();
-	    		console.log( data );
-	    		
-	    		$.post( "/edit-user", $(this).serialize(), function( data, status, xhr ){
-	    			console.log( "Success!" );
-	    		})
-	    		.fail( function(){
-	    			console.log( "Fail :(" );
-	    		});
+	    	$( "#edit-player-modal" ).on( "show.bs.modal", function (event) {
+	    		var button = $(event.relatedTarget)
+	    		$(this).find( ":input[name='Id']" ).val( button.data( "id" ) );
+	    		$(this).find( ":input[name='Name']" ).val( button.data( "name" ) );
 	    	});
-	    		
-        $( "#add-player form" ).on( "submit", function(e){
-          console.log( "form submit" );
-          e.preventDefault();
-          var data = $(this).serialize();
-          console.log( data );
-          
-          $.post( "/add-user", $(this).serialize(), function( data, status, xhr ){
-            console.log( "Success!" );
-          })
-          .fail( function(){
-            console.log( "Fail :(" );
-          });
+
+        $( "#add-player-modal, #edit-player-modal" ).on( "shown.bs.modal", function (event) {
+          $(this).find( "input:text:visible:first" ).focus();
+        });
+
+        var bootstrapOptions = {
+          errorElement: "span",
+          errorClass: "help-block",
+          highlight: function(element, errorClass) {
+            $(element).closest( ".form-group" ).addClass( "has-error" );
+          },
+          unhighlight: function(element, errorClass) {
+            $(element).closest( ".form-group" ).removeClass( "has-error" );
+          }
+        };
+
+        $( "#add-player-modal form, #edit-player-modal form" ).each( function(){
+          $(this).validate( bootstrapOptions );
         });
 	    	
 	    });
@@ -61,32 +54,11 @@
   </head>
   
   <body>
-	  <nav class="navbar navbar-default navbar-static-top">
+	  <nav th:replace="fragments :: nav" class="navbar navbar-default navbar-static-top">
 	    <div class="container">
 	    
 	      <div class="navbar-header">
-	        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-	          <span class="sr-only">Toggle navigation</span>
-	          <span class="icon-bar"></span>
-	          <span class="icon-bar"></span>
-	          <span class="icon-bar"></span>
-	        </button>
-	        <a class="navbar-brand" href="Summary">Welcome to <strong>QuickSplit</strong></a>
-	      </div>
-	      
-	      <div id="navbar" class="navbar-collapse collapse">
-	        <ul class="nav navbar-nav navbar-right">
-	          <li><a href="Summary">Summary</a></li>
-	          <li><a href="Results">Results</a></li>
-	          
-	          <li class="dropdown active">
-	            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Admin <span class="caret"></span></a>
-	            <ul class="dropdown-menu" role="menu">
-	              <li><a href="AddResult" class="active">Add Result</a></li>
-	            </ul>
-	          </li>
-	          
-	        </ul>
+	        <a class="navbar-brand">Static Navbar</a>
 	      </div>
 	      
 	    </div>
@@ -104,26 +76,38 @@
 			      <th></th>
 			    </tr>
 			  </thead>
-			  <tbody>
+			  <tbody th:remove="all-but-first">
 			    <tr th:each="player : ${Players}">
 			      <td th:text="${player.id}">1</td>
-			      <td th:text="${player.name}">Test</td>
-			      <td><a href="#" data-toggle="modal" data-target="#edit-player">Edit</a></td>
+			      <td th:text="${player.name}">Andrew</td>
+			      <td><a href="#" data-toggle="modal" 
+			        th:attr="data-id=${player.id},data-name=${player.name}" 
+			        data-target="#edit-player-modal" data-id="1" data-name="Andrew">Edit</a></td>
+			    </tr>
+			    <tr>
+			       <td>2</td>
+			       <td>Bob</td>
+			       <td>
+			         <a href="#" data-toggle="modal" data-target="#edit-player-modal" 
+			           data-id="2" data-name="Bob">Edit</a>
+			       </td>
 			    </tr>
 	      </tbody>
 		  </table>
 		  
-		  <button type="button" class="btn btn-primary btn-sm" data-toggle="modal" data-target="#add-player">
-        <span class="glyphicon glyphicon-plus"></span>
-          Add Player
-      </button>
-		  
+      <div class="button-row">
+  		  <button type="button" class="btn btn-primary btn-sm" data-toggle="modal" data-target="#add-player-modal">
+          <span class="glyphicon glyphicon-plus"></span>
+            Add Player
+        </button>
+		  </div>
 		</div>
 		
-		<div class="modal fade" id="edit-player" tabindex="-1" role="dialog">
+		<div class="modal fade" id="edit-player-modal" tabindex="-1" role="dialog">
       <div class="modal-dialog modal-sm">
         <div class="modal-content">
-	        <form>
+	        <form th:action="@{/EditPlayer}" method="post">
+	          <input type="hidden" name="Id"/>
 		        <div class="modal-header">
 			        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
 			        <h4 class="modal-title" id="myModalLabel">Player Details</h4>
@@ -142,10 +126,10 @@
       </div>
     </div>
     
-    <div class="modal fade" id="add-player" tabindex="-1" role="dialog">
+    <div class="modal fade" id="add-player-modal" tabindex="-1" role="dialog">
       <div class="modal-dialog modal-sm">
         <div class="modal-content">
-          <form>
+          <form th:action="@{/AddPlayer}" method="post">
             <div class="modal-header">
               <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
               <h4 class="modal-title" id="myModalLabel">Add Player</h4>
