--- a/src/main/webapp/WEB-INF/templates/fragments.html
+++ b/src/main/webapp/WEB-INF/templates/fragments.html
@@ -1,4 +1,4 @@
-<html>
+<html xmlns:th="http://www.thymeleaf.org">
 
   <body>
     
@@ -24,6 +24,7 @@
 		          <ul class="dropdown-menu" role="menu">
 		            <li><a th:href="@{/AddResult}">Add Result</a></li>
 		            <li><a th:href="@{/players}">Players</a></li>
+		            <li><a th:href="@{/seasons}">Seasons</a></li>
 		          </ul>
 		        </li>
 		      </ul>
