--- a/src/main/webapp/WEB-INF/templates/players.html
+++ b/src/main/webapp/WEB-INF/templates/players.html
@@ -66,7 +66,7 @@
 	  
 	  <div class="container">
 	  
-		  <h1>Players!</h1>
+		  <h1>Players</h1>
 		  
 		  <table class="table table-condensed table-striped">
 			  <thead>
@@ -106,11 +106,11 @@
 		<div class="modal fade" id="edit-player-modal" tabindex="-1" role="dialog">
       <div class="modal-dialog modal-sm">
         <div class="modal-content">
-	        <form th:action="@{/EditPlayer}" method="post">
+	        <form th:action="@{/edit-player}" method="post">
 	          <input type="hidden" name="Id"/>
 		        <div class="modal-header">
 			        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-			        <h4 class="modal-title" id="myModalLabel">Player Details</h4>
+			        <h4 class="modal-title">Edit Player</h4>
 			      </div>
 			      <div class="modal-body">
 			        <div class="form-group">
@@ -119,7 +119,7 @@
 	            </div>
 			      </div>
 			      <div class="modal-footer">
-			        <button type="submit" class="btn btn-primary btn-sm">Update</button>
+			        <button type="submit" class="btn btn-primary btn-sm">Save</button>
 			      </div>
 	        </form>
         </div>
@@ -129,10 +129,10 @@
     <div class="modal fade" id="add-player-modal" tabindex="-1" role="dialog">
       <div class="modal-dialog modal-sm">
         <div class="modal-content">
-          <form th:action="@{/AddPlayer}" method="post">
+          <form th:action="@{/add-player}" method="post">
             <div class="modal-header">
               <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-              <h4 class="modal-title" id="myModalLabel">Add Player</h4>
+              <h4 class="modal-title">Add Player</h4>
             </div>
             <div class="modal-body">
               <div class="form-group">
@@ -141,7 +141,7 @@
               </div>
             </div>
             <div class="modal-footer">
-              <button type="submit" class="btn btn-primary btn-sm">Update</button>
+              <button type="submit" class="btn btn-primary btn-sm">Save</button>
             </div>
           </form>
         </div>
