--- a/src/main/webapp/WEB-INF/templates/transactions.html
+++ b/src/main/webapp/WEB-INF/templates/transactions.html
@@ -14,14 +14,26 @@
     <script src="../../js/quicksplit.js" th:src="@{js/quicksplit.js}"></script>
     
     <link type="text/css" rel="stylesheet"
-      href="../../css/bootstrap.css" th:href="@{/css/bootstrap.css}">
+      href="../../css/bootstrap.css" th:href="@{/css/bootstrap.css}"/>
     <link type="text/css" rel="stylesheet"
-      href="../../css/bootstrap-theme.css" th:href="@{/css/bootstrap-theme.css}">
+      href="../../css/bootstrap-theme.css" th:href="@{/css/bootstrap-theme.css}"/>
     <link type="text/css" rel="stylesheet"
       href="../../css/quicksplit.css" th:href="@{/css/quicksplit.css}"/>
       
     <script>
 	    $(document).ready( function(){
+
+        $( "#add-payment-modal" ).on( "show.bs.modal", function (event) {
+          var button = $(event.relatedTarget);
+          var row = button.closest( "tr" );
+          $(this).find( "#PlayerId" ).val( row.data( "id" ) );
+          $(this).find( "#PlayerName" ).val( row.data( "name" ) );
+          var defaultAmount = parseInt( row.data( "amount" ) ) / -100;
+          $(this).find( "#Amount" ).val( defaultAmount.toFixed(2) );
+          $(this).find( "#Date" ).val( new Date().toISOString().slice(0, 10) );
+          $(this).find( "#Description" ).val( 
+            defaultAmount > 0 ? "Cash payment" : "Cash withdrawal" );
+        });
 	      
 	    });
     </script>
@@ -40,8 +52,46 @@
 	  </nav>
 	  
 	  <div class="container">
+
+      <h1>Outstanding Accounts</h1>
+      <p>Outstanding account balances, click 'Record Payment' to record a payment or withdrawal against that player.</p>
+
+      <table class="table table-condensed table-striped">
+        <thead>
+          <tr>
+            <th>Player</th>
+            <th>Outstanding Amount</th>
+            <th></th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr data-id="1" data-name="Andrew" data-amount="10000" 
+            th:each="player : ${OutstandingPlayer}">
+            <td>Andrew</td>
+            <td>$100.00</td>
+            <td>
+              <a href="#" data-toggle="modal" data-target="#add-payment-modal">
+                Record Payment
+              </a>
+            </td>
+          </tr>
+          <tr data-id="2" data-player="Zack" data-amount="-20000"
+            th:remove="all">
+            <td>Zack</td>
+            <td>-$200.00</td>
+            <td>
+              <a href="#">Record Payment</a>
+            </td>
+          </tr>
+          <tr>
+            <td><b>Total</b></td>
+            <td><b>$999.99</b></td>
+            <td></td>
+          </tr>
+        </tbody>
+      </table>
 	  
-		  <h1>Transaction List</h1>
+		  <h1>Recent Transactions</h1>
 		  
 		  <table class="table table-condensed table-striped">
 			  <thead>
@@ -54,10 +104,10 @@
 			    </tr>
 			  </thead>
 			  <tbody>
-			    <tr th:each="transaction : ${Transactions}">
+			    <tr th:each="transaction : ${Transactions}" th:attr="data-id=${transaction.id}">
 			      <td th:text="${transaction.playerId}">1</td>
 			      <td th:text="${transaction.seasonId}">2</td>
-			      <td th:text="${transaction.date}">Mon, 21 Mar 1986</td>
+			      <td th:text="${#dates.format(transaction.date)}">Mon, 21 Mar 1986</td>
 			      <td th:text="${transaction.amount}">-25.60</td>
 			      <td th:text="${transaction.description}">Season #1 loss</td>
 			    </tr>
@@ -71,15 +121,47 @@
 	      </tbody>
 		  </table>
 		  
-      <div class="button-row">
-  		  <button type="button" class="btn btn-primary btn-sm" data-toggle="modal" data-target="#add-transaction-modal">
-          <span class="glyphicon glyphicon-plus"></span>
-            Record Transaction
-        </button>
-		  </div>
 		</div>
+
+    <div class="modal fade" id="add-payment-modal" tabindex="-1" role="dialog">
+      <div class="modal-dialog modal-sm">
+        <div class="modal-content">
+          <form th:action="@{/add-payment}" method="post">
+            <div class="modal-header">
+              <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+              <h4 class="modal-title">Record Payment</h4>
+            </div>
+            <div class="modal-body">
+              <div class="form-group">
+                <input type="hidden" name="PlayerId" id="PlayerId"/>
+                <label>Player</label>
+                <input type="text" name="PlayerName" id="PlayerName" class="form-control" readonly>
+              </div>
+              <div class="form-group">
+                <label for="Date">Date</label>
+                <input type="date" name="Date" class="form-control" id="Date" required>
+              </div>
+              <div class="form-group">
+                <label for="Amount">Amount</label>
+                <div class="input-group">
+                  <div class="input-group-addon">$</div>
+                  <input type="number" name="Amount" class="form-control" id="Amount" required>
+                </div>
+              </div>
+              <div class="form-group">
+                <label>Description</label>
+                <textarea name="Description" id="Description" class="form-control" rows="2"></textarea>
+              </div>
+            </div>
+            <div class="modal-footer">
+              <button type="submit" class="btn btn-primary btn-sm">Save</button>
+            </div>
+          </form>
+        </div>
+      </div>
+    </div>
 	  
 	  
- </body>
+  </body>
   
 </html>
