--- a/src/main/webapp/css/quicksplit.css
+++ b/src/main/webapp/css/quicksplit.css
@@ -33,8 +33,12 @@ table.statTable td {
 	white-space: nowrap;
 }
 
-table.statTable td.negative { 
+table td.negative { 
   color: #CC1122; 
+}
+
+table tfoot {
+	font-weight: bold;
 }
 
 /*
